<resources>
    <string name="app_name">ShoeStore</string>
    <string name="welcome">Welcome to Shoe Store</string>
    <string name="login">Please Sign in or Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="login_success">You have logged in successfully</string>
    <string name="instructions">Navigate to Instructions screen</string>
    <string name="instructionsButton">Navigate to Shoe Lists</string>
    <string name="instructionsFragment">Instructions</string>
    <string name="appInstructions">If an online store wants to acquire and retain customers effectively, it needs to offer the best possible customer experience. The key to doing this is by connecting with customers on all available touch points, providing a great experience each time.</string>
    <string name="addShoes">Add Shoe</string>
    <string name="shoe_name">shoeName</string>
    <string name="shoe_size">shoeSize</string>
    <string name="shoe_company">shoeCompany</string>
    <string name="shoe_description">shoeDescription</string>
    <string name="shoe_image">ShoeImage</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
</resources>
