<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="339dp"
        android:layout_height="89dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/instructionsFragment"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="334dp"
        android:layout_height="209dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/appInstructions"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/navigationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/navigationButton"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:text="@string/instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">


    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>