<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeFragment">
        <!--USED constraint  layout to give me more flexibility  than
        linear  layout  and to use chaining    -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="339dp"
            android:layout_height="89dp"
            android:layout_marginTop="72dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="316dp"
            android:layout_height="80dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/login_success"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/navigationButton"
            android:layout_width="300dp"
            android:layout_height="85dp"
            android:layout_marginTop="92dp"
            android:gravity="center"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.014">


        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>