<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--USED constraint  layout to give me more flexibility  than
    linear  layout  and to use chaining    -->
    <data>
        <variable
            name="shoeList"
            type="com.udacity.shoestore.ShoesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">


        <EditText
            android:id="@+id/editText6"
            android:layout_width="225dp"
            android:layout_height="39dp"
            android:layout_marginStart="25dp"
            android:autofillHints=""
            android:hint="@string/shoe_description"
            android:text="@={shoeList.shoeDescription}"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/editText5">

        </EditText>

        <EditText
            android:id="@+id/editText5"
            android:layout_width="225dp"
            android:layout_height="39dp"
            android:layout_marginStart="43dp"
            android:autofillHints=""
            android:hint="@string/shoe_size"
            android:text="@={shoeList.shoeSize}"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/editText6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/editText4">

        </EditText>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="225dp"
            android:layout_height="39dp"

            android:autofillHints="name"
            android:hint="@string/shoe_company"
            android:text="@={shoeList.shoeCompany}"
            app:layout_constraintBottom_toTopOf="@+id/editText5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/editText3">

        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="121dp"
            android:layout_height="35dp"
            android:fontFamily="sans-serif"
            android:gravity="center"

            android:text="@={shoeList.shoeName}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="145dp"
            android:layout_height="49dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@={shoeList.shoeDescription}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

        </TextView>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="225dp"
            android:layout_height="39dp"
            android:autofillHints=""
            android:hint="@string/shoe_name"
            android:inputType="text"
            android:text="@={shoeList.shoeName}"
            app:layout_constraintBottom_toTopOf="@+id/editText4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent">

        </EditText>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="127dp"
            android:layout_height="37dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@={shoeList.shoeSize}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

        </TextView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="128dp"
            android:layout_height="33dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@={shoeList.shoeCompany}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="132dp"
            android:layout_height="64dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="56dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="122dp"
            android:layout_height="61dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="56dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent">

        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>